<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hi_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/light"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"/>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_below="@+id/hi_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bold_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"/>

        <ImageView
            android:id="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_horiz_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"/>

    </RelativeLayout>



    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/relative"
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"/>

    <TextView
        android:layout_below="@+id/recycler_view"
        android:id="@+id/project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bold_project_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"/>

    <TextView
        android:id="@+id/name"
        android:layout_below="@+id/project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/light"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"/>

    <LinearLayout
        android:id="@+id/abc_layout"
        android:layout_below="@+id/name"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/abc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abc_mobile_app"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"/>

        <ImageView
            android:id="@+id/edit"
          android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_black_24dp"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"/>

    </LinearLayout>

    <View
        android:id="@+id/abc_view"
        android:layout_below="@+id/abc_layout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/view"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end"/>

    <TextView
        android:layout_below="@+id/abc_view"
        android:id="@+id/product_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/light"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"/>

    <RelativeLayout
        android:layout_below="@+id/product_text"
        android:id="@+id/ecommerce_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ecommerce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abc_mobile_app"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"/>

        <TextView
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/margin_end"/>

    </RelativeLayout>

    <View
        android:id="@+id/ecommerce_view"
        android:layout_below="@+id/ecommerce_layout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/view"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end"/>


    <RelativeLayout
        android:id="@+id/timezone_layout"
        android:layout_below="@+id/ecommerce_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timezone"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"/>

        <TextView
            android:id="@+id/timezone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/margin_end"/>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="123dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_top"
                    android:drawableRight="@drawable/ic_info_outline_black_24dp"
                    android:text="@string/price"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/duration"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/light" />

            </LinearLayout>

            <Button
                android:layout_width="244dp"
                android:layout_height="61dp"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/button"
                android:text="@string/start"
                android:textColor="@color/white" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>